2010-02-16  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: post-release versionbump to 1.6.3 "Hava Nagila"

2010-02-13  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/ext/apps-menu.jl
	* man/news.texi: The dangerous 'open-file' in apps-menu.jl is protected with condition-case. Symlink is read again. All 'if' are replaced by 'when' when possible.

	* lisp/sawfish/gtk/README
	* src/display.c: Doc. Comments in source. New file lisp/sawfish/gtk/README describes the diretory's contents.

	* lisp/sawfish/wm/tabs/tab.jl: Minor fix: delete bogus export in tab.jl.

	* lisp/sawfish/wm/ext/match-window.jl
	* man/news.texi: Bugfix of window placement by direction. When the window placement mode is for example east and the window is wider than the screen, then the window was put wrongly. It is fixed.

2010-02-13  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/apps-menu.jl: non-readable .desktop files are no longer stopping sawfish startup
	                                    though files with permission 000 are still...

2010-02-10  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/apps-menu.jl: - ignore .desktop files that are symlinks
	                                    - don't crash if first char of a keyvalue is ;
					    - don't crash if # is part of the keyvalue
					    -- [Matthew Love]

2010-02-02  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/cfg/wm.jl
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/commands/shrink-yank.jl
	* lisp/sawfish/wm/util/compat.jl
	* lisp/sawfish/wm/util/nokogiri.jl
	* man/Makefile.in
	* man/faq.texi
	* man/news.texi
	* man/sawfish.texi:  Doc changes. Corrections and descrption / format improvements in grow, pack, shrink and yank. Verbose instruction on how to compile docs. Describes exactly what 'obsolete' variables are. Comments in sourecs. Basic Xinerama doc.

2010-01-24  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.spec.in: improved [Kim B. Heino]
