@@ -9,6 +9,19 @@ they occurred between. For more detailed information see the
 @file{ChangeLog} file in the Sawfish source tree, or git log.
 (See Wiki page for how to access git repository.)
 
+@heading 1.6.3 "Hava Nagila"
+
+@itemize @bullet
+
+@item The 1.6.3 release has some improvements.
+
+@item Other Changes
+@itemize @minus
+@item Then pressing the lock-button also do a state-change of the window
+accordingly. [Fuchur]
+@end itemize
+@end itemize
+
 @heading 1.6.2 "Mighty Disco King"
 
 @itemize @bullet
