@@ -1,3 +1,6 @@
+2010-02-17  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/keymaps.jl: then pressing the lock-button also do a state-change [Fuchur]
+
 2010-02-16  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in: post-release versionbump to 1.6.3 "Hava Nagila"
 
